--- a/app/assets/stylesheets/pages/_fxone_plus.scss
+++ b/app/assets/stylesheets/pages/_fxone_plus.scss
@@ -1,3 +1,8 @@
+.fxone-plus {
+  position: relative;
+  overflow: hidden;
+}
+
 .fxone-plus-graphic {
   transition: all 0.3s ease;
   @include for-phone-only {
