--- a/app/assets/stylesheets/pages/_software.scss
+++ b/app/assets/stylesheets/pages/_software.scss
@@ -18,6 +18,11 @@
   top: 0;
   width: 250px;
   z-index: 2;
+  @include for-phone-only {
+    right: -110px;
+    top: 60px;
+    width: 210px;
+  }
 }
 
 .software-little-pill {
@@ -28,11 +33,28 @@
   z-index: 2;
 }
 
+.software-graphic-mobile {
+  margin: 100px 0;
+}
+
 .software-second-section-wrapper {
   position: relative;
   padding-top: 200px;
   padding-bottom: 150px;
   background: linear-gradient(#F6F7FA, #FFFFFF);
+  @include for-phone-only {
+    padding-top: 0;
+    padding-bottom: 80px;
+  }
+}
+
+.software-first-section-right {
+  display: flex;
+  justify-content: center;
+  @include for-phone-only {
+    flex-direction: column;
+    margin: 0 auto;
+  }
 }
 
 .software-card {
@@ -51,6 +73,46 @@
     font-size: 12px;
     margin: 0;
     text-align: center;
+  }
+  @include for-phone-only {
+    margin: 20px auto;
+    height: 200px;
+    width: 180px;
+  }
+}
+
+.software-cards-little-pill {
+  position: absolute;
+  left: 0px;
+  top: 560px;
+  width: 170px;
+  z-index: 2;
+}
+
+.software-card-icon {
+  @include for-phone-only {
+    width: 120px;
+  }
+}
+
+.software-card-left {
+  margin-bottom: 80px;
+  margin-right: 20px;
+  @include for-phone-only {
+    margin: 0;
+  }
+}
+
+.software-card-right {
+  margin-top: 80px;
+  @include for-phone-only {
+    margin: 0;
+  }
+}
+
+.no-margin-top-mobile {
+  @include for-phone-only {
+    margin-top: 0;
   }
 }
 
@@ -76,17 +138,39 @@
   }
 }
 
+.software-graphic {
+  width: 75%;
+  @include for-phone-only {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+}
+
+.software-graphic-side {
+  width: 30%;
+  margin: 100px calc(50% - 15%);
+}
+
 .software-fifth-section-content {
   margin: 30px auto;
+  @include for-phone-only {
+    width: 90%;
+  }
 }
 
 .software-fifth-section-right {
   border-left: 1px solid rgba(0,0,0,0.06);
+  @include for-phone-only {
+    border: none;
+  }
 }
 
 .software-third-section-bottom {
   padding: 40px 0;
   position: relative;
+  @include for-phone-only {
+    padding-top: 0;
+  }
 }
 
 .software-fourth-section-graphics-container {
@@ -100,17 +184,30 @@
 .software-fourth-section-text {
   padding: 50px 0;
   position: relative;
+  @include for-phone-only {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .software-fourth-section-wrapper {
   position: relative;
   padding-bottom: 100px;
+  @include for-phone-only {
+    padding-bottom: 0;
+  }
 }
 
 .software-fourth-section-graphics {
   width: 50%;
   padding: 16px;
   position: relative;
+  @include for-phone-only {
+    width: 100%;
+    border-radius: 25px;
+  }
 }
 
 .software-dots {
@@ -142,6 +239,9 @@
     background-color: #FFAD00;
     color: #FFEFD4;
   }
+  @include for-phone-only {
+    margin-bottom: 50px;
+  }
 }
 
 .software-fifth-section-wrapper {
@@ -152,6 +252,10 @@
   width: 60%;
   margin: 0 calc(50% - 25%);
   padding-top: 50px;
+  @include for-phone-only {
+    width: 100%;
+    margin: 0 0 0 56px;
+  }
 }
 
 .software-slant {
@@ -212,6 +316,10 @@
     top: 1200px;
     transform: rotate(-2deg);
   }
+}
+
+.graphic-shadow {
+  box-shadow: 0 0 25px rgba(0,0,0,0.1);
 }
 
 
