--- a/app/assets/stylesheets/pages/_inks_and_consumables.scss
+++ b/app/assets/stylesheets/pages/_inks_and_consumables.scss
@@ -13,18 +13,25 @@
 
 .inks-second-section-wrapper {
   background: linear-gradient(#F6F7FA, #FFFFFF);
+  position: relative;
   @include for-phone-only {
-    margin-top: 50px;
+    padding-top: 50px;
   }
 }
 
 .inks-third-section-wrapper {
   background-color: #FFFFFF;
+  @include for-phone-only {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .inks-section {
   display: flex;
   align-items: center;
+  justify-content: center;
   @include for-phone-only {
     flex-direction: column;
   }
@@ -36,6 +43,11 @@
   top: 0;
   width: 250px;
   z-index: 2;
+  @include for-phone-only {
+    right: -30px;
+    top: 60px;
+    width: 160px;
+  }
 }
 
 .inks-little-pill {
@@ -56,6 +68,8 @@
 .inks-first-section-left {
   display: flex;
   justify-content: center;
+  position: relative;
+  z-index: 3
 }
 
 .inks-card {
@@ -92,6 +106,13 @@
   width: 40px;
 }
 
+.inks-dots-mobile {
+  position: absolute;
+  top: 0px;
+  right: 20px;
+  width: 70px;
+}
+
 .inks-slant {
   position: absolute;
   top: -450px;
@@ -113,4 +134,15 @@
 
 .inks-graphic {
   width: 70%;
+  @include for-phone-only {
+    width: 100%;
+  }
+}
+
+.inks-pipes {
+  @include for-phone-only {
+    width: auto;
+    height: 300px;
+    margin-left: 290px;
+  }
 }
