--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -2,17 +2,18 @@
   <div class="inks-first-section-wrapper">
     <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "inks-big-pill") %>
     <div class="container">
-      <div class="inks-section">
-        <div class="inks-first-section-left">
-          <h1 class="about-first-section-text"><%= t("inks_and_consumables.first_section_text") %></h1>
+      <div class="inks-section mobile-reverse">
+        <div class="inks-first-section-left no-padding-mobile">
+          <h1 class="responsive-header"><%= t("inks_and_consumables.first_section_text") %></h1>
         </div>
-        <div class="inks-first-section-right d-flex justify-content-center">
+        <div class="inks-first-section-right mobile-margin-bottom">
           <%= cl_image_tag("inks_and_cons_tyoqgi.png", :quality=>"auto", class: "inks-graphic about-graphic-two") %>
         </div>
       </div>
     </div>
   </div>
   <div class="inks-second-section-wrapper">
+    <%= image_tag 'about-dots.png', class: 'inks-dots-mobile show-mobile' %>
     <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "inks-little-pill") %>
     <div class="container">
       <div class="inks-section">
@@ -24,7 +25,7 @@
           </div>
         </div>
         <div class="inks-first-section-right">
-          <%= image_tag 'about-dots.png', class: 'inks-dots' %>
+          <%= image_tag 'about-dots.png', class: 'inks-dots hide-mobile' %>
           <div class="inks-card" style="margin: 0 auto 0 0">
             <%= image_tag 'inks-icon-2.png', class: 'about-icon' %>
             <p class="inks-card-header"><%= t("inks_and_consumables.second_card_title") %></p>
@@ -35,15 +36,16 @@
     </div>
   </div>
   <div class="inks-third-section-wrapper">
-    <%= cl_image_tag("slant-background_xuvpqk.png", :quality=>"auto", class: "inks-slant") %>
+    <%= cl_image_tag("slant-background_xuvpqk.png", :quality=>"auto", class: "inks-slant hide-mobile") %>
+    <%= cl_image_tag("mobile-slant_kd8uj1.png", :quality=>"auto", class: "inks-slant show-mobile") %>
     <div class="container">
-      <div class="inks-section">
+      <div class="inks-section mobile-reverse">
         <div class="inks-first-section-left">
-          <%= cl_image_tag("inks_pipe_mmpdgo.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%= cl_image_tag("inks_pipe_mmpdgo.png", :quality=>"auto", class: "about-graphic about-graphic-two inks-pipes") %>
         </div>
-        <div class="inks-first-section-right">
+        <div class="inks-first-section-right mobile-center">
           <%= image_tag 'inks-icon-3.png', class: 'about-icon' %>
-          <h3 class="inks-fifth-section-text"><%= t("inks_and_consumables.third_section_text") %></h3>
+          <h3 class="inks-fifth-section-text mobile-margin-bottom"><%= t("inks_and_consumables.third_section_text") %></h3>
         </div>
       </div>
     </div>
