--- a/app/views/pages/cost_of_ownership.html.erb
+++ b/app/views/pages/cost_of_ownership.html.erb
@@ -1,16 +1,15 @@
 <div class="ownership-wrapper">
   <div class="about-first-section-wrapper ownership-first-section-wrapper">
-    <%= cl_image_tag("about-big-pill-sliced_mpxusz.png", :quality=>"auto", class: "ownership-big-pill") %>
+    <%= cl_image_tag("about-big-pill-sliced_mpxusz.png", :quality=>"auto", class: "ownership-big-pill hide-mobile") %>
     <%= cl_image_tag("about-little-pill-sliced_z6varw.png", :quality=>"auto", class: "ownership-little-pill") %>
     <div class="container">
       <div class="nav-spacer"></div>
-      <div class="about-section about-first-section">
-        <div class="about-first-section-left">
-          <h1 class="about-first-section-text"><%= t("cost_of_ownership.first_section_title") %></h1>
+      <div class="about-section about-first-section mobile-column">
+        <div class="about-first-section-left no-padding-mobile">
+          <h1 class="responsive-header"><%= t("cost_of_ownership.first_section_title") %></h1>
           <p class="paragraph-text"><%= t("cost_of_ownership.first_section_text") %></p>
-
         </div>
-        <div class="about-first-section-right">
+        <div class="about-first-section-right no-padding-mobile">
           <%= cl_image_tag("ownership-graphic_fv4qk7.png", :quality=>"auto", class: "about-graphic") %>
         </div>
       </div>
@@ -18,11 +17,12 @@
   </div>
   <div class="ownership-second-section-wrapper">
     <%= image_tag 'ownership-icon.png', class: 'about-icon' %>
-    <h3 class="about-first-section-text ownership-second-section-text text-center"><%= t("cost_of_ownership.second_section_title") %></h3>
+    <h3 class="ownership-second-section-text text-center"><%= t("cost_of_ownership.second_section_title") %></h3>
     <p class="paragraph-text ownership-second-section-text text-center"><%= t("cost_of_ownership.second_section_text") %></p>
   </div>
   <div class="ownership-third-section-wrapper">
-    <%= cl_image_tag("ownership-slider_vuhnwc.png", :quality=>"auto", class: "ownership-slider") %>
+    <%= cl_image_tag("ownership-slider_vuhnwc.png", :quality=>"auto", id: "ownership-slider", class: "ownership-slider hide-mobile") %>
+    <%= cl_image_tag("ownership-slider-mobile_h8vl9t.png", :quality=>"auto", id: "ownership-slider-mobile", class: "ownership-slider show-mobile") %>
     <div class="coming-soon" style="background-image: url('<%= cl_image_path "coming-soon-background_wjcoct.png" %>')">
       <p class="coming-soon-text"><%= t("fxone_plus.coming_soon") %></p>
     </div>
@@ -32,7 +32,8 @@
 
 <script>
   comingSoon = document.querySelector('.coming-soon');
-  image = document.querySelector('.ownership-slider');
+  image = document.getElementById('ownership-slider');
+  imageMobile = document.getElementById('ownership-slider-mobile');
 
   image.addEventListener('mouseover', () => {
     comingSoon.style.opacity = 1
@@ -48,4 +49,21 @@
     comingSoon.style.opacity = 0
     image.style.filter = ''
   })
+
+  imageMobile.addEventListener('mouseover', () => {
+    comingSoon.style.opacity = 1
+  })
+  imageMobile.addEventListener('mouseleave', () => {
+    comingSoon.style.opacity = 0
+  })
+  comingSoon.addEventListener('mouseover', () => {
+    comingSoon.style.opacity = 1
+    imageMobile.style.filter = 'blur(10px)'
+  })
+  comingSoon.addEventListener('mouseleave', () => {
+    comingSoon.style.opacity = 0
+    imageMobile.style.filter = ''
+  })
+
+
 </script>
